fix: made text align to be justify for about section

--- a/src/sections/About/About.css
+++ b/src/sections/About/About.css
@@ -26,6 +26,7 @@
 .about-text-data p {
   font-size: var(--font-md);
   margin-bottom: 2.5rem;
+  text-align: justify;
 }
 
 .about-text-data p a {
