--- a/src/sections/Projects/Projects.css
+++ b/src/sections/Projects/Projects.css
@@ -69,6 +69,7 @@ body.dark .projects-age-select {
 .project-description p {
   font-size: var(--font-md);
   line-height: 1.3;
+  text-align: justify;
 }
 
 .project-link {
